# optimizer-framework

./: .gitignore  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  CONTRIBUTOR-LICENSE.md  LICENSE  LICENSE.md  Makefile  README.md  pyproject.toml  settings.ini
.github/workflows/: test.yaml
docs/: README.md  requirements-docs.txt
docs/source/: changelog.rst  conf.py  contributing.md  faq.md  glossary.md  index.rst  introduction.md  quickstart.md
docs/source/_static/css/: previous.css
docs/source/api/: index.md
docs/source/concepts/: constraints.md  core.md  data.md  models.md  optimization.md
docs/source/examples/: marketing_mix.md  scikit_learn.md
docs/source/features/: overview.md
docs/source/guides/: black_box_model.md  configuration.md  custom_optimization.md  model_integration.md  optimization_strategies.md  production_deployment.md
examples/scripts/: complete_example.py  optimization_results.json  sklearn-example.py
nbs/: 00_core.ipynb  index.ipynb  nbdev.yml
optimizer_framework/: _modidx.py
src/atlas/: __init__.py  _modidx.py
src/atlas/core/: exceptions.py  interfaces.py
src/atlas/factories/: sklearn_factory.py
src/atlas/models/: __init__.py
src/atlas/models/blackbox/: model_builder.py
src/atlas/models/wrappers/: __init__.py  sklearn_wrapper.py
src/optimizer_framework/: _modidx.py
src/optimizer_framework/core/: exceptions.py  interfaces.py
tests/: test_blackbox_model_builder.py
tests/fixtures/: test_test.py
tests/unit/sklearn/: sklearn_model_test.py
